tests/ui/parser/issues/issue-17904-2.rs
struct Bar<T> { x: T } where T: Copy //~ ERROR expected item, found keyword `where`

fn main() {}
